# emulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  components.c  components.h  demultiplexer.c  demultiplexer.h  emulator.c  emulator.h  main.c  multiplexer.c  multiplexer.h
src/assembler/: assembler.c  assembler.h
src/components/: CMakeLists.txt  components.c  components.h
src/emulator/: CMakeLists.txt  emulator.c  emulator.h
src/logger/: CMakeLists.txt  logger.c  logger.h
test/: CMakeLists.txt  tests.c
unity/examples/: unity_config.h
unity/extras/fixture/src/: unity_fixture.c
unity/src/: unity.c  unity.h
unity/test/tests/: testunity.c
